Update for new orgs index.html
didnt remove old franchises

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                     <option value="ACA">ACA</option>
                     <option value="AG">AG</option>
                     <option value="ATL">ATL</option>
+                    <option value="ATO">ATO</option>
                     <option value="AVI">AVI</option>
                     <option value="BS">BS</option>
                     <option value="COW">COW</option>
@@ -123,6 +124,7 @@
                     <option value="DB">dB</option>
                     <option value="DRG">DRG</option>
                     <option value="FRG">FRG</option>
+                    <option value="GF">GF</option>
                     <option value="GAS">GAS</option>
                     <option value="GRN">GRN</option>
                     <option value="H4K">H4K</option>
@@ -132,9 +134,11 @@
                     <option value="OS">OS</option>
                     <option value="PA">PA</option>
                     <option value="SAV">SAV</option>
+                    <option value="TEE">TEE</option>
                     <option value="TSC">TSC</option>
                     <option value="UPS">UPS</option>
                     <option value="WET">WET</option>
+                    <option value="WIZ">WIZ</option>
                 </select>
 
                 <div class="brush-control">
@@ -215,6 +219,7 @@
                 ACA: "teams/ACA/ProfilePicture.png",
                 AG: "teams/AG/ProfilePicture.png",
                 ATL: "teams/ATL/ProfilePicture.png",
+                ATO: "teams/ATO/ProfilePicture.png",
                 AVI: "teams/AVI/ProfilePicture.png",
                 BS: "teams/BS/ProfilePicture.png",
                 COW: "teams/COW/ProfilePicture.png",
@@ -222,6 +227,7 @@
                 DB: "teams/dB/ProfilePicture.png",
                 DRG: "teams/DRG/ProfilePicture.png",
                 FRG: "teams/FRG/ProfilePicture.png",
+                GF: "teams/GF/ProfilePicture.png",
                 GAS: "teams/GAS/ProfilePicture.png",
                 GRN: "teams/GRN/ProfilePicture.png",
                 H4K: "teams/H4K/ProfilePicture.png",
@@ -231,9 +237,11 @@
                 OS: "teams/OS/ProfilePicture.png",
                 PA: "teams/PA/ProfilePicture.png",
                 SAV: "teams/SAV/ProfilePicture.png",
+                TEE: "teams/TEE/ProfilePicture.png",
                 TSC: "teams/TSC/ProfilePicture.png",
                 UPS: "teams/UPS/ProfilePicture.png",
                 WET: "teams/WET/ProfilePicture.png",
+                WIZ: "teams/WIZ/ProfilePicture.png",
             };
 
             // Initialize canvases
