--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSC Signature Overlay Tool</title>
+    <title>CSC Franchise Sticker Generator</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <a href="#mainCanvas" class="skip-link">Skip to main content</a>
     <header class="header">
-        <h1>CSC Signature Overlay Tool</h1>
+        <h1>CSC Franchise Sticker Generator</h1>
     </header>
 
     <div class="main-container">
@@ -18,8 +18,8 @@
             <section class="section">
                 <h2>Background</h2>
                 <div class="form-group">
-                    <label for="teamSelect">Team</label>
-                    <select id="teamSelect" aria-label="Select team for background" aria-required="true">
+                    <label for="teamSelect">Franchise</label>
+                    <select id="teamSelect" aria-label="Select franchise for background" aria-required="true">
                         <!-- Options populated by JavaScript -->
                     </select>
                 </div>
@@ -158,7 +158,7 @@
     </div>
 
     <footer class="footer">
-        <p>Made with ❤️ by chobits • CSC 2025</p>
+        <p>Thanks to chobits, spidey, and ry • CSC 2025</p>
     </footer>
 
     <script type="module" src="js/app.js"></script>
