Update ATO sticker and Franchises in Assets and Readme

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     </div>
 
     <footer class="footer">
-        <p>Thanks to chobits, spidey, and ry • CSC 2025</p>
+        <p>Thanks to chobits, spidey, ry, and Cameron King • CSC 2026</p>
     </footer>
 
     <script type="module" src="js/app.js"></script>
